--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -18,4 +18,7 @@ dependencies {
     cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
 
     testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
+
+    cordapp "com.r3.corda.lib.tokens:tokens-contracts:$cordaTokenSdkVersion"
+    cordapp "com.r3.corda.lib.tokens:tokens-money:$cordaTokenSdkVersion"
 }
