--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -21,4 +21,7 @@ dependencies {
 
     cordapp "com.r3.corda.lib.tokens:tokens-contracts:$cordaTokenSdkVersion"
     cordapp "com.r3.corda.lib.tokens:tokens-money:$cordaTokenSdkVersion"
+    cordaCompile ("$corda_release_group:corda-finance-contracts:$corda_release_version"){
+        transitive = false
+    }
 }
