--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -51,8 +51,12 @@ dependencies {
     // CorDapp dependencies.
     cordapp project(":contracts")
     cordapp "com.r3.corda.lib.ci:ci-workflows:$confidentialIdVersion"
-    cordapp "com.r3.corda.lib.tokens:tokens-selection:$cordaTokenSdkVersion"
     cordapp "com.r3.corda.lib.tokens:tokens-workflows:$cordaTokenSdkVersion"
+    cordapp "com.r3.corda.lib.tokens:tokens-contracts:$cordaTokenSdkVersion"
+
+    cordaCompile ("$corda_release_group:corda-finance-contracts:$corda_release_version"){
+        transitive = false
+    }
 }
 
 task integrationTest(type: Test, dependsOn: []) {
